frontend/src/components/jersey/ExpandingOptions.module.css
.options {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  overflow: hidden;

  width: 100%;
  max-width: 900px;
  height: 400px;
}

/* mobile horizontal layout - scaled down */
@media screen and (max-width: 767px) {
  .options {
    flex-direction: row;
    height: 300px;
    width: 100%;
  }

  .option {
    min-width: 32px;
    margin: 4px;
    border-radius: 18px;
    background-size: cover;
  }

  .option.active {
    flex-grow: 10000;
    max-width: 65%;
    margin: 0px;
    border-radius: 20px;
    background-size: cover;
  }

  .option:not(.active) {
    flex-grow: 1;
  }

  /* Smaller label and icon sizes for mobile */
  .label {
    height: 32px;
  }

  .icon {
    min-width: 32px;
    max-width: 32px;
    height: 32px;
  }

  /* Center icon horizontally inside thin collapsed options */
  .option:not(.active) .label {
    left: 50%;
    bottom: 12px;
    transform: translateX(-50%);
    right: unset;
  }

  .option.active .label {
    bottom: 12px;
    left: 12px;
    top: unset;
    transform: unset;
  }
}

.option {
  position: relative;
  overflow: hidden;

  min-width: 60px;
  margin: 10px;

  background: var(--optionBackground, var(--defaultBackground, #e6e9ed));
  background-size: auto 120%;
  background-position: center;
  background-repeat: no-repeat;

  cursor: pointer;
  border-radius: 30px;

  transition: 0.5s cubic-bezier(0.05, 0.61, 0.41, 0.95);
}

.option.active {
  flex-grow: 10000;
  transform: scale(1);
  max-width: 600px;
  margin: 0px;
  border-radius: 40px;
  background-size: auto 100%;
}

.option:not(.active) {
  flex-grow: 1;
}

/* shadow overlay */
.shadow {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 120px;
  transition: 0.5s cubic-bezier(0.05, 0.61, 0.41, 0.95);
}

.option.active .shadow {
  box-shadow: inset 0 -120px 120px -120px black, inset 0 -120px 120px -100px black;
}

.option:not(.active) .shadow {
  bottom: -40px;
  box-shadow: inset 0 -120px 0px -120px black, inset 0 -120px 0px -100px black;
}

/* label */
.label {
  display: flex;
  position: absolute;
  right: 0;
  height: 40px;
  transition: 0.5s cubic-bezier(0.05, 0.61, 0.41, 0.95);
}

.option.active .label {
  bottom: 20px;
  left: 20px;
}

.option:not(.active) .label {
  bottom: 10px;
  left: 10px;
}

.icon {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;

  min-width: 40px;
  max-width: 40px;
  height: 40px;
  border-radius: 100%;

  background-color: white;
  color: var(--defaultBackground);
}

.info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-left: 10px;
  color: white;
  white-space: pre;
}

.info > div {
  position: relative;
  transition: 0.5s cubic-bezier(0.05, 0.61, 0.41, 0.95), opacity 0.5s ease-out;
}

.option.active .info > div {
  left: 0;
  opacity: 1;
}

.option:not(.active) .info > div {
  left: 20px;
  opacity: 0;
}

.main {
  font-weight: bold;
  font-size: 1.2rem;
}

.sub {
  transition-delay: 0.1s;
}

